updtae program feature